🎯 Simplify: Single workflow for build & release
✅ Removed 6 unnecessary workflows:
- ultimate-android-build.yml
- smart-gradle-setup.yml
- auto-gradle-update.yml
- build-release.yml
- pr-check.yml
- build.yml

✅ Kept only ONE simple workflow:
- main-build.yml: Build & Release APK

🎯 Result: Clean, simple CI/CD
- Builds on every push to main
- Creates automatic releases with APK
- No complexity, just works
- Easy to understand and maintain

--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -2,8 +2,6 @@ name: 🚀 Build & Release APK
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -23,26 +21,11 @@ jobs:
         
     - name: 🔧 Setup Gradle
       uses: gradle/gradle-build-action@v3
-      with:
-        gradle-version: wrapper
-        
-    - name: 📋 Display Build Info
-      run: |
-        echo "🏗️ Building Speed Drawer Kotlin App"
-        echo "📊 Build Information:"
-        echo "   • Java Version: $(java -version 2>&1 | head -1)"
-        echo "   • Gradle Version: $(cd android && ./gradlew --version | grep Gradle)"
-        echo "   • Build Date: $(date)"
-        
-    - name: 🔨 Build Debug APK
+      
+    - name: 🚀 Build Release APK
       run: |
         cd android
         chmod +x gradlew
-        ./gradlew assembleDebug
-        
-    - name: 🚀 Build Release APK  
-      run: |
-        cd android
         ./gradlew assembleRelease
         
     - name: 📊 Get App Version
@@ -53,69 +36,28 @@ jobs:
         VERSION_CODE=$(./gradlew -q printVersionCode | tail -1)
         echo "version_name=$VERSION_NAME" >> $GITHUB_OUTPUT
         echo "version_code=$VERSION_CODE" >> $GITHUB_OUTPUT
-        echo "📱 App Version: $VERSION_NAME ($VERSION_CODE)"
         
-    - name: 📦 Upload Debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: speed-drawer-debug-v${{ steps.version.outputs.version_name }}
-        path: android/app/build/outputs/apk/debug/*.apk
-        retention-days: 30
-        
-    - name: 📦 Upload Release APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: speed-drawer-release-v${{ steps.version.outputs.version_name }}
-        path: android/app/build/outputs/apk/release/*.apk
-        retention-days: 90
-        
-    - name: 📏 Check APK Size
-      run: |
-        echo "📊 APK Size Analysis:"
-        DEBUG_SIZE=$(du -h android/app/build/outputs/apk/debug/*.apk | cut -f1)
-        RELEASE_SIZE=$(du -h android/app/build/outputs/apk/release/*.apk | cut -f1)
-        echo "   • Debug APK: $DEBUG_SIZE"
-        echo "   • Release APK: $RELEASE_SIZE"
-        echo "🎯 Target: <10MB for optimized Kotlin app"
-        
-    - name: 🎉 Create Release (on main branch)
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    - name: 🎉 Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v${{ steps.version.outputs.version_name }}-build${{ steps.version.outputs.version_code }}
+        tag_name: v${{ steps.version.outputs.version_name }}
         name: Speed Drawer v${{ steps.version.outputs.version_name }}
         body: |
-          ## 🚀 Speed Drawer Kotlin - Release v${{ steps.version.outputs.version_name }}
+          ## 🚀 Speed Drawer Kotlin Android
           
-          ### 📱 What's New:
-          - Native Kotlin Android app (converted from Flutter)
-          - 78% smaller size compared to Flutter version
-          - 70% faster performance and 75% faster cold start
-          - Material Design 3 with light/dark theme support
-          - Advanced search and favorites functionality
+          **📱 What's New:**
+          - Native Kotlin Android app (78% smaller than Flutter)
+          - Material Design 3 with dark/light themes
+          - Fast search and favorites functionality
+          - Optimized performance and memory usage
           
-          ### 📊 Performance Metrics:
-          - **APK Size**: <10MB (vs ~45MB Flutter)
-          - **RAM Usage**: ~45MB (vs ~150MB Flutter) 
-          - **Cold Start**: ~0.8s (vs ~3.2s Flutter)
-          - **Search Speed**: ~240ms (vs ~800ms Flutter)
+          **📊 Performance:**
+          - APK Size: <10MB (vs ~45MB Flutter)
+          - RAM Usage: ~45MB (vs ~150MB Flutter)
+          - Cold Start: ~0.8s (vs ~3.2s Flutter)
           
-          ### 🔧 Technical Details:
-          - **Architecture**: MVVM with LiveData
-          - **Min SDK**: 23 (Android 6.0+)
-          - **Target SDK**: 34 (Android 14)
-          - **Build Tools**: AGP 8.1.2 + Gradle 8.1.1
-          - **Optimization**: ProGuard enabled with resource shrinking
-          
-          ### 📥 Download:
-          Choose the APK that matches your needs:
-          - **Release APK**: Optimized for production use
-          - **Debug APK**: For testing and development
-          
-          Built automatically with GitHub Actions ☁️
-        files: |
-          android/app/build/outputs/apk/release/*.apk
-          android/app/build/outputs/apk/debug/*.apk
+          **📥 Download the APK below and install on your Android device!**
+        files: android/app/build/outputs/apk/release/*.apk
         draft: false
         prerelease: false
       env:
